client selection alignment fix

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -448,13 +448,13 @@ table tr td {
 }
 
 
-.css-yk16xz-control,
+/*.css-yk16xz-control,
 .css-1pahdxg-control,
 .css-1hb7zxy-IndicatorsContainer,
 .css-g1d714-ValueContainer {
     height: 26.5px !important;
     min-height: 26.5px !important;
-}
+}*/
 
 .css-g1d714-ValueContainer {
     padding: 0px 8px !important;
